{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "648e3df4-dabf-4b96-b1d7-22c97f52badc",
            "actions": [
                {
                    "name": "PlayNote",
                    "type": "Button",
                    "id": "2cd12ef7-7859-4580-a9a0-61e6e52b14b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveVert",
                    "type": "Button",
                    "id": "ab78b442-33e1-4547-81ab-4ee7e8c7714f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveHori",
                    "type": "Button",
                    "id": "60fb7996-a7de-4564-a772-87716d528521",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7dc0ddc-5aed-4a97-9a0d-4ffbf105d3b8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa8c2315-2315-41d0-b76a-c230109ae4e5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bade78ea-d569-495b-a297-5148b7e82557",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f630efe6-cfe9-4c51-83fe-09627ac79b70",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a9bd728-b8b2-4fec-9ecf-12aecbdce0bd",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "900ebcd4-7600-4a54-bcc5-a442d0bae3b4",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNote",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Vertical",
                    "id": "728b941a-96c2-476b-b676-ea4fad5e11e8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVert",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e451ceb1-6a03-4107-a169-8cf30b34920f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVert",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "acd9cd1e-57d2-4ace-9b58-194900ea757c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVert",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Horizontal",
                    "id": "80bb882e-1afa-4c26-932a-bad7226ed918",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHori",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c4b7a9d5-82dd-4310-945b-3cf956c2d45e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHori",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "20561f75-b70f-4ca9-acb5-f623df2d4e5f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHori",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}